--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@aws-cdk/core": "^1.204.0",
+    "@aws-sdk/client-comprehend": "^3.723.0",
+    "@aws-sdk/client-dynamodb": "^3.723.0",
+    "@aws-sdk/lib-dynamodb": "^3.723.0",
     "aws-cdk-lib": "^2.155.0",
     "constructs": "^10.4.2",
     "source-map-support": "^0.5.21"
