--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.9",
     "aws-cdk": "2.155.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
