--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
+    "test:file": "jest --",
     "cdk": "cdk"
   },
   "devDependencies": {
