--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "review-board",
   "version": "0.1.0",
   "bin": {
-    "review-board": "bin/review-board.js"
+    "review-board": "bin/app.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
     "test:file": "jest --",
+  "test:int": "jest --testPathPattern=integration",
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
+    "@types/aws-lambda": "^8.10.147",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.14.9",
     "aws-cdk": "2.155.0",
     "aws-sdk-client-mock": "^4.1.0",
@@ -27,7 +29,10 @@
     "@aws-sdk/client-dynamodb": "^3.723.0",
     "@aws-sdk/lib-dynamodb": "^3.723.0",
     "aws-cdk-lib": "^2.155.0",
+    "aws-lambda": "^1.0.7",
+    "axios": "^1.7.9",
     "constructs": "^10.4.2",
+    "joi": "^17.13.3",
     "source-map-support": "^0.5.21"
   }
 }
