--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "watch": "tsc -w",
     "test": "jest",
     "test:file": "jest --",
-  "test:int": "jest --testPathPattern=integration",
+    "test:int": "jest --testPathPattern=integration",
     "cdk": "cdk"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.14.9",
     "aws-cdk": "2.155.0",
     "aws-sdk-client-mock": "^4.1.0",
@@ -25,6 +26,8 @@
   },
   "dependencies": {
     "@aws-cdk/core": "^1.204.0",
+    "@aws-lambda-powertools/logger": "^2.12.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.723.0",
     "@aws-sdk/client-comprehend": "^3.723.0",
     "@aws-sdk/client-dynamodb": "^3.723.0",
     "@aws-sdk/lib-dynamodb": "^3.723.0",
@@ -32,7 +35,9 @@
     "aws-lambda": "^1.0.7",
     "axios": "^1.7.9",
     "constructs": "^10.4.2",
+    "dotenv": "^16.4.7",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "source-map-support": "^0.5.21"
   }
 }
