--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
     "review-board": "bin/app.js"
   },
   "scripts": {
-    "build": "tsc",
+    "clean": "rm -rf dist",
+    "build": "esbuild bin/**/*.ts lambda/**/*.ts lib/**/*.ts test/**/*.ts validation/**/*.ts --outdir=dist --bundle --platform=node --target=node18 --external:@aws-lambda-powertools/commons,@aws-lambda-powertools/logger,@aws-lambda-powertools/metrics,@aws-lambda-powertools/tracer",
     "watch": "tsc -w",
     "test": "jest",
     "test:file": "jest --",
     "test:int": "jest --testPathPattern=integration",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "npm run clean && npm run build && cdk deploy"
   },
   "devDependencies": {
+    "@aws-lambda-powertools/logger": "^1.4.0",
+    "@aws-lambda-powertools/metrics": "^1.4.0",
+    "@aws-lambda-powertools/tracer": "^1.4.0",
     "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.14.9",
     "aws-cdk": "2.155.0",
     "aws-sdk-client-mock": "^4.1.0",
+    "esbuild": "^0.24.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
@@ -26,11 +32,11 @@
   },
   "dependencies": {
     "@aws-cdk/core": "^1.204.0",
-    "@aws-lambda-powertools/logger": "^2.12.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.723.0",
     "@aws-sdk/client-comprehend": "^3.723.0",
     "@aws-sdk/client-dynamodb": "^3.723.0",
     "@aws-sdk/lib-dynamodb": "^3.723.0",
+    "@middy/core": "^3.6.2",
     "aws-cdk-lib": "^2.155.0",
     "aws-lambda": "^1.0.7",
     "axios": "^1.7.9",
