--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "outDir": "./dist",
+    "lib": ["es2020", "dom"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -21,12 +19,8 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "strictPropertyInitialization": false,
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+  "include": ["bin/**/*.ts", "lambda/**/*.ts", "lib/**/*.ts", "test/**/*.ts", "validation/**/*.ts"], 
+  "exclude": ["node_modules", "dist", "cdk.out"]
 }
